manifests/argocd/repos/repo-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: istio-release
  namespace: argocd
spec:
  hosts:
    - istio-release.storage.googleapis.com
  location: MESH_EXTERNAL # Indicates it's outside the mesh
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
